--- a/sass/01base/_base.scss
+++ b/sass/01base/_base.scss
@@ -30,3 +30,7 @@ li {
 a {
   text-decoration: none;
 }
+
+.container {
+  margin: 0 auto;
+}
