--- a/sass/04layout/_header.scss
+++ b/sass/04layout/_header.scss
@@ -1,11 +1,13 @@
 .header {
+  margin: 0;
   width: 100%;
   height: 8vh;
   background-color: $default-color;
   box-shadow: 0 2px 5px $color-grey;
   display: grid;
-  grid-template-columns: 5% 45% 50%;
+  grid-template-columns: 5% 45% 45%;
   justify-content: space-between;
+  grid-column-gap: 0.5rem;
   align-items: center;
 
   &__logo-box {
