--- a/sass/04layout/_landing-page.scss
+++ b/sass/04layout/_landing-page.scss
@@ -1,10 +1,10 @@
 .landing-content {
-  margin: 1rem;
-  width: 90vw;
+  margin: 2rem auto;
+  width: 85%;
   display: grid;
   grid-template-columns: repeat(12, 1fr);
   grid-template-rows: repeat(6, 1fr);
-  grid-gap: 1rem;
+  grid-gap: 0.5rem;
   justify-content: space-around;
 
   &__main {
